TestSuite/errors/err0213.pas
type T = class end;

function abs(var self: T): integer; extensionmethod;
begin
end;

begin
  
end.